Fix color contrast: apply dark background-color to body in dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -102,7 +102,8 @@ header figure img {
   height: auto;
 }
 
-:root[data-theme='dark'] {
+:root[data-theme='dark'],
+:root[data-theme='dark'] body {
   background-color: #111;
   color: #eee;
 }
